--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&family=Libre+Baskerville:wght@400;700&family=Rye&family=Tilt+Neon&display=swap');
-
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css");
 
 * {
     margin: 0;
@@ -49,4 +49,43 @@ h1 {
     border: 1px solid rgb(46, 32, 8);
     border-radius: 5px;
 }
+/*sucursal*/
+.ubicacion {
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+}
+.sucursal1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
+    background-image: url(../img/encabezado.jpg);  
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.mapa {
+    width: 440px;
+    height: 300px;
+}
+.sucursal2 {
+    padding: 30px;
+    padding-top: 120px;
+    text-align: center;
+    background-color: rgb(46, 32, 8);
+    color: aliceblue;
+}
+/* servicios */
+.servicios {
+    text-align: center;
+    background-color: bisque;
+    padding: 50px;
+}
+.serv {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
 
+}
+.servIcon {
+    text-align: center;
+}
