--- a/css/style.css
+++ b/css/style.css
@@ -274,31 +274,38 @@ footer {
         width: 80px;
     }
     nav {
-        height: 70px;
+        
+        height: 100%;
+        margin-bottom: 1px;
+        
         
     }
+    .navbar {
+        padding: 0;
+    }
     .navbar-toggler {
-        background-color: rgb(143, 86, 46);
+        background-color: rgb(143, 86, 46);  
     }
     .desplegable {
         background-color: rgb(143, 86, 46);
-        
-        
-        
+        text-align: center;
     }
     /*face*/
     
     .face {
-        
+        position: relative;
         width: 0px;
         
     }
     .dispMovil {
+        
         width: 100%;
         height: 100%;
         font-size: 30px;
         
         
+    }
+    .dispMovil h1 h2 h3 .boton {
     }
     .estudioMovil {
         display: flex;
@@ -378,6 +385,7 @@ footer {
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows:1fr ;
+        padding-top: 10px;
     }
     .reseña {
         padding: 5px;
