--- a/css/style.css
+++ b/css/style.css
@@ -235,10 +235,13 @@ h1 {
 .contactanos{
     text-align: center;
     background-color: bisque;
-    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .tc {
-    margin-bottom: 50px;
+    margin-bottom: 10%;
 }
 .contacto {
     display: grid;
@@ -247,7 +250,19 @@ h1 {
     
 }
 .icono {
-    margin-bottom: 50px;
+    margin-bottom: 10%;
+}
+.cont1 {
+    width: 95vw;
+}
+.cont2 {
+    width: 95vw;
+}
+.cont3 {
+    width: 95vw;
+}
+.correo-electronico {
+    font-size: 120%;
 }
 /* formulario */
 .infoCliente {
@@ -310,6 +325,7 @@ footer {
     font-size: 0px;
 }
 @media screen and (max-width: 480px){
+
     /*nav*/
     .logoEC {
         width: 80px;
@@ -342,9 +358,10 @@ footer {
         
     }
     .dispMovil {
-        
+        position: relative;
+        top: -13vh;
         width: 100%;
-        height: 100%;
+        height: 40vh;
         font-size: 30px;
         
         
@@ -368,7 +385,8 @@ footer {
     }
     .tituloMovil {
         font-size: 30px;
-        margin-bottom: 50px;
+        margin-top: 20%;
+        margin-bottom: 10%;
         animation:focus-in-expand .8s cubic-bezier(.25,.46,.45,.94) both;
         animation-delay: .2s;
         position: relative;
